--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^12.19.2",
+    "lucide-react": "^0.525.0",
     "ol": "^9.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
